# Polynomials

./: CMakeLists.txt  README.md
src/: calc_poly.c  poly.c  poly.h  test_poly.c
